# JianArtifact

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  about.toml  config.example.toml  rustfmt.toml
.cargo/: audit.toml
.claude/rules/: .sdd-version  README.md  architecture-invariants.md  git-commit.md  scope-discipline.md  static-analysis.md  testing-and-quality.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: API.md  ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  OPERATIONS.md  PRD.md
docs/adr/: 0001-tech-stack-and-packaging.md  0002-sqlite-metadata-store.md  0003-authentication.md  0004-authorization-model.md  0005-repository-types.md  0006-nexus-migration.md  0007-permission-granularity-and-groups.md  0008-l7-abuse-protection.md  0009-internal-usage-analytics.md  0010-first-admin-bootstrap.md  0011-session-jwt-lifecycle.md  0012-vulnerability-offline-matching.md  0013-docker-bearer-token-auth.md  0014-s3-object-storage-backend.md  0015-observability-audit-and-metrics.md  0016-auth-provider-oidc-ldap.md  0017-protection-monitoring-and-alerting.md  0018-runtime-protection-config-reload.md  0019-async-migration-jobs.md  0020-unified-outbound-network-proxy.md  0021-self-update-mechanism.md  0022-runtime-editable-settings.md  0023-host-system-monitor.md  0024-socks5-and-web-proxy-credentials.md  0025-open-source-licenses-page.md  0026-self-update-rollback.md  0027-unified-metrics-timeseries.md  0028-dynamic-config-db-overlay.md  0029-runtime-log-file-sink-and-read-api.md  0030-encrypted-proxy-credentials-at-rest.md  0031-forward-compatible-migrations-for-rollback.md  0032-self-update-restart-and-backup-robustness.md  0033-web-triggered-system-restart-shutdown.md  0034-frontend-i18n-framework.md  0035-frontend-mock-backend.md  0036-playwright-e2e.md  0037-maven-server-authoritative-metadata.md  0038-unified-task-registry.md  0039-group-virtual-repository.md  README.md  (+2 more)
docs/specs/: async-migration-jobs.md  fr-100-socks5-proxy-creds.md  fr-101-version-chrome.md  fr-102-licenses-page.md  fr-103-settings-merge.md  fr-103-settings-redesign.md  fr-104-update-rollback.md  fr-105-metrics-timeseries.md  fr-106-dynamic-config-db.md  fr-107-syslog.md  fr-108-dashboard-overview.md  fr-109-system-management.md  fr-111-i18n.md  fr-115-browse-redesign.md  fr-121-maven-metadata-authority.md  fr-122-maven-snapshots.md  fr-123-web-upload-maven.md  fr-126-online-update-async.md  fr-128-proxy-test.md  fr-129-settings-redesign.md  fr-131-task-registry.md  fr-132-task-center.md  fr-134-incremental-migration.md  fr-135-repo-list-enhance.md  fr-136-group-repository.md  fr-137-migrate-group.md  fr-138-archive-release.md  fr-79-80-protection-config.md  fr-84-network-proxy.md  fr-85-online-update.md  fr-86-ci-release.md  fr-87-settings-page.md  fr-88-settings-hotswap.md  fr-89-prerelease-channel.md  fr-90-config-gen.md  fr-91-migrate-control.md  fr-92-shell.md  fr-93-browse.md  fr-94-header-search.md  fr-95-role-views.md  (+18 more)
frontend/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/e2e/: admin-session.spec.ts  login.spec.ts  public-browse.spec.ts  repository-detail.spec.ts
frontend/src/: App.test.tsx  App.tsx  global.css  main.tsx
frontend/src/api/: client.test.ts  client.ts  endpoints.ts  types.ts
frontend/src/auth/: AuthContext.tsx  login.flow.test.tsx  useAuth.ts
frontend/src/components/: AclPanel.tsx  AppLayout.test.tsx  AppLayout.tsx  ArtifactDetailPanel.tsx  ErrorAlert.tsx  GlobalTopProgressBar.test.tsx  GlobalTopProgressBar.tsx  GroupAclPanel.tsx  HostMonitorPanel.tsx  NotificationCenter.test.tsx  NotificationCenter.tsx  TopProgressBar.tsx
frontend/src/hooks/: useDocumentTitle.test.tsx  useDocumentTitle.ts  useGlobalProgress.test.tsx  useGlobalProgress.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: browse.ts  (+15 more)
migrations/: 0001_init.sql  0002_repo_acl_unique.sql  0003_audit_log.sql  0004_acl_action.sql  0005_vuln_advisory.sql  0006_user_groups.sql  0008_usage_stats.sql  0009_external_auth.sql  0010_protection_alerts.sql  0011_metric_samples.sql  0012_app_settings.sql  0013_group_members.sql
scripts/: gen-licenses.mjs
src/: config.rs  config_overlay.rs  crypto_box.rs  lib.rs  logs.rs  main.rs  metrics_keys.rs  version.rs
src/api/: acl.rs  alerts.rs  analytics.rs  anomaly_ban.rs  artifacts.rs  audit.rs  auth_routes.rs  browse.rs  cargo_routes.rs  cc_challenge.rs  dashboard.rs  docker_routes.rs  dynamic_config.rs  format_routes.rs  go_routes.rs  groups.rs  identity.rs  licenses.rs  maven_publish.rs  metrics.rs  metrics_query.rs  metrics_sampler.rs  migrate.rs  migration_jobs.rs  mod.rs  monitor.rs  npm_routes.rs  nuget_routes.rs  oidc_routes.rs  protection.rs  protection_config.rs  protection_state.rs  pypi_routes.rs  rate_limit.rs  repo_access.rs  repositories.rs  search.rs  settings.rs  slowloris.rs  system.rs  (+10 more)
src/auth/: basic.rs  jwt.rs  ldap.rs  lockout.rs  mod.rs  oidc.rs  provider.rs  token.rs
src/authz/: mod.rs
src/format/: browse.rs  cargo.rs  docker.rs  docker_registry.rs  go_mod.rs  maven.rs  mod.rs  npm.rs  nuget.rs  pypi.rs  raw.rs  service.rs
src/licenses/: data.generated.json  mod.rs
src/meta/: alerts.rs  audit.rs  groups.rs  metrics.rs  mod.rs  repo.rs  settings.rs  usage.rs  vuln.rs
src/migrate/: group.rs  hosted.rs  http.rs  mod.rs  offline.rs  online.rs  proxy.rs
src/monitor/: mod.rs
src/proxy/: http.rs  mod.rs
src/repo/: mod.rs
src/storage/: mod.rs  s3.rs
src/update/: mod.rs  restart.rs  source.rs  state.rs  tests.rs
src/vuln/: http.rs  matcher.rs  mod.rs  osv.rs
src/web/: mod.rs
tests/: artifact_api.rs  audit_api.rs  auth_api.rs  bootstrap_log_redaction.rs  cargo_api.rs  directory_browse_api.rs  docker_api.rs  go_api.rs  group_authz_api.rs  group_repo_api.rs  ldap_api.rs  maven_api.rs  migrate_api.rs  network_proxy.rs  npm_api.rs  nuget_api.rs  oidc_api.rs  protection_config_api.rs  protection_status_api.rs  pypi_api.rs  repo_authz_api.rs  upload_api.rs  web_spa.rs
(+90 files in other folders)
