[package]
name = "jianartifact"
version = "0.4.0"
edition = "2021"
description = "单文件、零外部依赖、开箱即用的轻量级多格式制品库管理器"
license = "Apache-2.0"

[dependencies]
# Web 框架与异步运行时（ADR-0001）
# multipart 特性：解析 PyPI twine 与 NuGet nuget push 的 multipart/form-data 上传体（FR-27 / FR-29）
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "io-util"] }
# tower-http 中间件：请求追踪与请求 ID
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
# 元数据存储：嵌入式 SQLite（ADR-0002），sqlite 经 bundled 静态链接零外部依赖
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
# 序列化与配置加载
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# 配置加载：TOML + 环境变量覆盖（前缀 JIANARTIFACT_）
figment = { version = "0.10", features = ["toml", "env"] }
# 口令哈希（ADR-0003）
argon2 = "0.5"
# 随机数：首启随机口令、Argon2 盐、API Token / JWT 密钥的高熵生成
rand = "0.8"
# Web 会话 JWT（ADR-0011，HS256）。关闭默认特性以避开 aws-lc-rs/ring 等原生加密后端，
# 启用纯 Rust 的 rust_crypto 加密 provider（RustCrypto 生态，零原生 C 依赖），
# 保持单一二进制零外部运行时依赖。
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
# Basic Auth 凭据的 base64 解码（ADR-0003）
base64 = "0.22"
# 定长时间比较：API Token 哈希比对避免计时侧信道（ADR-0003）
subtle = "2"
# 日志与分级追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误类型
thiserror = "2"
anyhow = "1"
# 唯一标识（主键与请求 ID）
uuid = { version = "1", features = ["v4"] }
# 命令行参数解析
clap = { version = "4", features = ["derive"] }
# 多校验和计算（FR-69）：制品流式写入时同时算 sha256/sha1/md5/sha512
# 均为 RustCrypto 纯 Rust 轻量哈希实现，与 argon2 同生态，零外部运行时依赖
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
digest = "0.10"
# proxy 上游拉取（FR-12）：关闭默认特性以避开 native-tls/openssl 等原生后端，
# 仅启用纯 rustls TLS（校验上游 HTTPS 证书）与流式响应体，守 SECURITY 零原生依赖。
# socks 特性（FR-100 / ADR-0024）：支持 socks5:// / socks5h:// 出站代理，经 tokio-socks
# 纯 Rust 传递依赖实现，无原生 C 依赖，守单一二进制零原生运行时依赖。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "socks"] }
# LDAP 认证集成（FR-35，ADR-0016）：bind 校验对接目录（AD / OpenLDAP）。关闭默认特性
# 以剔除 sync 同步客户端与 native-tls（openssl）后端，仅启用 rustls + ring 加密 provider
# （tls-rustls-ring，与上方 reqwest 同一 ring，零原生 C 依赖），守 SECURITY 单一二进制零原生运行时依赖。
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
# 把 reqwest 的字节流适配为 AsyncRead 喂给 BlobStore 流式写入（不整体载入内存）。
tokio-util = { version = "0.7", features = ["io"] }
# 单飞合并与上游字节流处理所需的 Stream 适配工具。
futures-util = "0.3"
# 前端静态资源编译期嵌入（ADR-0001）：编译期把 frontend/dist 打进二进制，
# 关闭默认特性以避免引入热重载等开发期依赖，保持发行物精简。
rust-embed = { version = "8", default-features = false }
# 据文件扩展名推断静态资源 Content-Type（rust-embed 提供 metadata 但 mime 猜测更稳妥）。
mime_guess = "2"
# 读取 NuGet .nupkg（zip 容器）内的 .nuspec 条目（FR-29）。关闭默认特性以避开
# bzip2 / zstd / lzma 等原生 C 压缩后端，仅启用纯 Rust 的 deflate（zlib-rs）——
# .nupkg 仅用 deflate / store 压缩，足够解压，守 SECURITY 零原生运行时依赖。
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }
# 解析 NuGet .nuspec（XML）取包 id / version（FR-29）。纯 Rust、零原生依赖。
quick-xml = "0.40"
# Prometheus 指标（FR-32，ADR-0015）：metrics facade + 进程内 prometheus recorder。
# 纯 Rust、进程内注册表，只在 GET /metrics 被抓取时渲染；不引外部时序库、不 push / remote-write（pull 模型）。
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
# 可配置 WAF 规则引擎（FR-55，ADR-0008）：正则匹配模式所用的轻量正则引擎。
# 纯 Rust、无依赖，针对二进制体积与编译时间优化（不含 regex 的 Unicode 大表 / SIMD），
# 守单一二进制零原生运行时依赖；WAF 规则在启动期预编译一次，热路径仅做匹配。
regex-lite = "0.1"
# 主机 / 系统监控采集（FR-98，ADR-0023）：跨平台读取 CPU / 内存 / 磁盘 / uptime。
# default-features=false 关掉默认全量，仅启用 system（CPU/内存/交换/uptime）与 disk（磁盘），
# 剔除 component（温度传感器）/ network（网卡）/ user（账户）以控二进制体积与依赖面。
# 其内部 unsafe 不影响本仓库的 forbid(unsafe_code)（仅约束本仓库代码）。
sysinfo = { version = "0.39.5", default-features = false, features = ["system", "disk"] }

# ---- S3 兼容对象存储后端（FR-30 / ADR-0014），默认关闭、opt-in 编译 ----
# 全部 optional：默认 `cargo build` 不引入任何 S3 代码与依赖，守单一二进制零外部运行时依赖。
# default-features=false 关掉 SDK 自带的默认 https client，避免默认拖入 aws-lc-rs 原生加密；
# 由本仓库显式经 aws-smithy-http-client 的 rustls-ring 注入纯 rustls + ring 客户端（零原生 C 依赖），
# 与现有 reqwest(rustls-tls) / jsonwebtoken(rust_crypto) 取向一致。
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest", "sigv4a"], optional = true }
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-ring"], optional = true }
aws-smithy-types = { version = "1", features = ["rt-tokio"], optional = true }
aws-credential-types = { version = "1", optional = true }

[features]
# S3 兼容对象存储后端（默认关闭）。启用即引入外部对象存储依赖，详见 ADR-0014 与 docs/OPERATIONS.md。
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-http-client", "dep:aws-smithy-types", "dep:aws-credential-types"]

[dev-dependencies]
# 集成测试：对 axum 路由直接发起请求
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# 测试用临时目录
tempfile = "3"
# Go 模块格式集成测试构造 / 校验模块 zip 内部布局（{module}@{version}/...）所用的 zip
# 复用 [dependencies] 中 NuGet 引入的同一 zip（统一版本，避免重复声明不同主版本）。

# release 档：strip + thin LTO + panic=abort 压低体积（ADR-0001，目标 < 27MB）
# 注意 panic=abort 仅作用于 release，避免影响 cargo test（test 走 dev/test 档）
[profile.release]
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
